Added an option when saftey is not known and a new car type

--- a/Views/Cars/Create.cshtml
+++ b/Views/Cars/Create.cshtml
@@ -96,6 +96,7 @@
                     Safety (1-5)
                 </label>
                 <select asp-for="Safety" class="form-control">
+                    <option value="0">0</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
