--- a/Views/Cars/Search.cshtml
+++ b/Views/Cars/Search.cshtml
@@ -1,5 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Search";
+    var allMakers = ViewData["allMakers"] as List<string>;
+    var allTypes = ViewData["allTypes"] as List<ExtraInfo.CarTypes>;
+
 }
 
 <h1>Search</h1>
@@ -15,18 +18,34 @@
         </div>
         <div class="form-group">
             <label for="maker" class="control-label">Maker</label>
-            <input name="maker" class="form-control" value=""/>
+        <select name="maker" class="form-control" >
+                <option value="" selected>None</option>
+                @foreach (var makerName in allMakers)
+                {    
+                    <option value="@makerName">@makerName</option>
+                }
+            </select>
         </div>
         <div class="form-group">
             <label for="model" class="control-label">Model</label>
             <input name="model" class="form-control" value="" />
+        </div>
+            <div>
+            <label for="type" class="control-label">Car Type</label>
+            <select name="type" class="form-control" >
+                <option value="" selected>None</option>
+                @foreach (var typeName in allTypes)
+                {
+            <option value="@typeName">@typeName.ToString().Replace("_", " ")</option>
+                }
+            </select>
         </div>
         <div class="form-group">
             <label for="range" class="control-label">Range</label>
             <input name="range" class="form-control" value=""/>
         </div>
         <div class="form-group">
-            <label for="chargeTime" class="control-label">Charge time</label>
+            <label for="chargeTime" class="control-label">Max Charge time</label>
             <input name="chargeTime" class="form-control" value="" />
         </div>
         <div class="form-group">
